# fullstack-boilerplate

./: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  package.json  readme.md  turbo.json
apps/client/: .eslintrc.json  index.html  package.json  tsconfig.json
apps/client/source/: index.tsx
apps/client/source/app/: index.tsx
apps/client/source/config/: index.ts
apps/client/source/context/: index.tsx
apps/client/source/redux/: index.tsx
apps/client/source/styles/: index.scss
apps/server/: package.json  tsconfig.json
apps/server/source/: index.ts
backend/: Dockerfile  pyproject.toml  readme.md
backend/apps/api/: main.py
backend/apps/api/routers/: proxy.py  status.py
backend/apps/api/services/: proxy.py
backend/apps/api/settings/: services.py
backend/apps/api/utils/: logger.py
backend/apps/mail/: main.py
backend/apps/mail/models/: sender.py
backend/apps/mail/routers/: sender.py  status.py
backend/apps/mail/services/: sender.py
backend/shared/: exceptions.py  setup.py
backend/shared/config/: environment.py
backend/shared/models/: status.py
backend/shared/utils/: logger.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  readme.md  turbo.json
frontend/apps/website/: next.config.js  package.json  tsconfig.json
frontend/libs/utils/: package.json
infra/backend/: .env
infra/nginx/conf.d/: dev.conf
tools/bundle/: package.json  tsconfig.json
tools/bundle/source/: index.ts
utils/eslint/: .eslintrc.json  package.json
utils/tsconfig/: package.json  tsconfig.json
(+28 files in other folders)
