[tool.poetry]
name = "backend"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Dependencies
[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "0.111.1"
pydantic = "2.7.4"
uvicorn = "0.30.0"
asyncio = "3.4.3"
sqlalchemy = "2.0.31"
httpx = "0.27.0"

# Dev dependencies
[tool.poetry.group.dev.dependencies]
black = "24.4.2"

# Api dependencies
[tool.poetry.group.api.dependencies]

# Mail dependencies
[tool.poetry.group.mail.dependencies]